99-misc/nginx-ingress/nginx-ing-1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing-1
  annotations:
    #networking.gke.io/managed-certificates: gcp-managed-cert-nginx-1
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.global-static-ip-name: gke-ingress-1
spec:
  tls:
    - secretName: edh-cert
  rules:
    - host: '*.<<VAR_NGINX_DOMAIN>>'
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingress-nginx-controller
                port:
                  number: 443
