99-misc/nginx-ingress/nginx-ing-2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing-2
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.global-static-ip-name: gke-ingress-2
spec:
  tls:
    - secretName: edh-cert
  rules:
    - host: '*.<<VAR_NGINX_DOMAIN>>'
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingress-nginx-restrict-controller
                port:
                  number: 443
